空のリスト作成方法の変更